--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,23 @@
 <h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<p>Please specify category:</p>
+<br/>
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm-offset-2 col-sm-6">
+      <form id="getTree" action="category">
+        Category:<br/>
+        <input type="text" id="category">
+        <input type="submit" value="Submit">
+      </form>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm-offset-2 col-sm-6">
+      <div id="results"></div>
+    </div>
+  </div>
+</div>
